[package]
name = "uu_langpack-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.uu_langpack]
path = ".."

[[bin]]
name = "fuzz_load"
path = "fuzz_targets/fuzz_load.rs"
test = false
doc = false
bench = false
